syntax = "proto3";

package ibc.applications.icq.v1;

option go_package = "github.com/cosmos/ibc-go/v6/modules/apps/icq/types";

import "gogoproto/gogo.proto";

// Params defines the set of on-chain interchain query parameters.
// The following parameters may be used to disable the host submodule.
message Params {
  // controller_enabled indicates whether the controller submodules are enabled.
  bool controller_enabled = 1 [(gogoproto.moretags) = "yaml:\"controller_enabled\""];
  // host_enabled enables or disables the host submodule.
  bool host_enabled = 2 [(gogoproto.moretags) = "yaml:\"host_enabled\""];
  // allow_queries defines a list of query paths allowed to be queried on a host chain.
  repeated string allow_queries = 3 [(gogoproto.moretags) = "yaml:\"allow_queries\""];
}
